# fastFind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  license  run.sh
src/: CMakeLists.txt  main.cpp  optUsage.def.in
src/filesystem/: CMakeLists.txt  navigator.cpp
src/include/common/: color.hpp  log.h  utils.h
src/include/config/: config.h  optUsage.def.in
src/include/filesystem/: navigator.h
src/include/threadpool/: threadpool.h
src/threadpool/: CMakeLists.txt  threadpool.cpp
